add hover style

--- a/styles.css
+++ b/styles.css
@@ -12,13 +12,13 @@ background-size: 80px;
 
 #logo { text-decoration: none; color:#030; }
 #logo:hover { text-decoration: underline; }
-
+#logo em { font-style: normal; }
+#logo:hover em { color:green; }
 h1 { 
     margin:0; 
     padding:4px 0 0 70px;
     font-family: sans-serif;
     font-weight: normal;
-    float:left;
     background: no-repeat left 10px url(colorstash.png);
 }
 h2 {
