--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,11 @@
 
 body {
     margin: 0;
-    font-family: Georgia;
     background-image: -webkit-linear-gradient(0, transparent 50%, rgba(255,255,255,.4) 50%);
     background-image: -moz-linear-gradient(0, transparent 50%, rgba(255,255,255,.4) 50%);
     background-image: -ms-linear-gradient(0, transparent 50%, rgba(255,255,255,.4) 50%);
     background-size: 80px;
 
-    padding-top: 40px;
-    padding-bottom: 40px;
     background-color: #f5f5f5;
 }
 
@@ -18,6 +15,7 @@ body.alternate {
 
 .colorpicker-container {
     max-width: 300px;
+    text-align: center;
     padding: 19px 29px 29px;
     margin: 0 auto 20px;
     background-color: #fff;
@@ -31,24 +29,43 @@ body.alternate {
 }
 
 
-#logo { text-decoration: none; color:#030; }
-#logo:hover { text-decoration: underline; color: green;}
+#logo {
+    text-decoration: none;
+    color:#030;
+}
+#logo:hover {
+    text-decoration: underline;
+    color: green;
+}
 
 h1 {
     margin:0;
     padding: 4px;
     font-weight: normal;
+    font-family: Georgia;
 }
 h2 {
     margin-top:0;
 }
 
+.btn-container {
+    position:absolute;
+    top: 10px;
+    right: 10px;
+}
+
 .head {
     background-color: rgba(255, 255, 255, .95);
     text-align: center;
+    margin-bottom: 40px;
+    padding-bottom: 10px;
  }
-.container { position:relative; background-color: rgba(255, 255, 255, .8); padding: 10px; }
-#colorpicker-container { float:left; }
+.container {
+    position:relative;
+    background-color: rgba(255, 255, 255, .1);
+    padding: 10px;
+}
+
 #input-container { margin-left: 300px;  }
 #input-container > div {  border: solid 10px; padding:10px; border-radius: 5px; min-width: 200px;}
 #input-container input { box-sizing: border-box; width: 100%;}
